# SpiraNet-lite

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
spiranet_lite/: SpiraLibsPars.py  __init__.py
